--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-	"name": "x-icons",
-	"private": true,
-	"scripts": {
-		"build": "turbo run build",
-		"dev": "turbo run dev",
-		"lint": "biome check .",
-		"lint:fix": "biome check --write .",
-		"format": "biome format --write .",
-		"check-types": "turbo run check-types"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.4.4",
-		"turbo": "^2.8.11",
-		"typescript": "5.9.2"
-	},
-	"packageManager": "pnpm@9.0.0",
-	"engines": {
-		"node": ">=18"
-	},
-	"lint-staged": {
-		"*.{js,jsx,ts,tsx,mjs,cjs}": "pnpm run lint"
-	}
+  "name": "x-icons",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "ultracite check",
+    "lint:fix": "ultracite fix",
+    "check-types": "turbo run check-types"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.4.0",
+    "lint-staged": "^16.2.7",
+    "turbo": "^2.8.11",
+    "typescript": "5.9.2",
+    "ultracite": "7.2.4"
+  },
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,mjs,cjs}": "pnpm run lint",
+    "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
+      "pnpm dlx ultracite fix"
+    ]
+  }
 }
