--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@repo/typescript-config",
-	"version": "0.0.0",
-	"private": true,
-	"license": "MIT",
-	"publishConfig": {
-		"access": "public"
-	}
+  "name": "@x-icons/typescript-config",
+  "version": "0.0.0",
+  "private": true,
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
