--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,6 @@
     "dev": "next dev --port 8888",
     "build": "next build",
     "start": "next start",
-    "lint": "biome check .",
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
@@ -16,7 +15,10 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@x-icons/tailwind-config": "workspace:*",
     "@x-icons/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.5",
+    "tailwindcss": "^4.1.5",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
