--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "exports": {
-    ".": "./shared-styles.css",
+    ".": "./index.css",
     "./postcss": "./postcss.config.js"
   },
   "devDependencies": {
