--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,13 +10,16 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/react": "19.2.2",
     "@x-icons/tailwind-config": "workspace:*",
     "@x-icons/typescript-config": "workspace:*",
-    "@types/react": "19.2.2",
     "tailwindcss": "^4.1.5",
     "typescript": "5.9.2"
   },
   "peerDependencies": {
     "react": "^19.0.0"
+  },
+  "dependencies": {
+    "@x-icons/utils": "workspace:^"
   }
 }
